tests/golden/errors/predicate_name.kso
pub play = print "{ready 3}"

fn ready n
  n < 10
