tests/golden/errors/predicate_name.stderr
error[naming]: `ready` answers only true or false: name it `ready?`
  --> predicate_name.kso:3:4
   3 | fn ready n
          ^
